Refactor debugging and testing: remove `AlphaBetaFunction`, introduce new debug tests (`TTableComparatorHeadDebugTest`, `TTableComparatorTailDebugTest`, `EvaluatorCacheDebugTest`), enhance `SorterTestSuite` coverage, and simplify `Dummy`.